--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,29 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>ModalCustomElement</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">  
 </head>
+
 <body>
-  <bz-modal></bz-modal>
+  <bz-modal>
+    <p>Contenido</p>
+  </bz-modal>
+
+  <script>
+    const modal = document.querySelector('bz-modal');
+    modal.setAttribute('active', true);
+    modal.setAttribute('title', 'Titulo');
+    
+    modal.addEventListener('close', (data) => {
+      console.log('Ventana cerrada', data);
+    });
+  </script>
 </body>
+
 </html>
