--- a/test.html
+++ b/test.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="http://bizagi-genome.azurewebsites.net/assets/genome/bizagi-genome-genome.min.css">
     <title>Testing component</title>
 </head>
 <body>
-    <bz-modal close="alert('Cerrado')"></bz-modal>
+    <bzg-modal active="true" close="alert('Cerrado')"></bzg-modal>
     <script src="./dist/modal-custom-element/bz-modal.js"></script>
 </body>
 </html>
