--- a/test.html
+++ b/test.html
@@ -9,5 +9,16 @@
 <body>
     <bzg-modal active="true" close="alert('Cerrado')"></bzg-modal>
     <script src="./dist/modal-custom-element/bz-modal.js"></script>
+    <script>
+        var modal = document.querySelector('bzg-modal');
+        modal.setAttribute('active', true);
+        modal.setAttribute('title', 'Title');
+        modal.setAttribute('accept-text', 'Continue');
+        modal.setAttribute('cancel-text', 'Cancel');
+        
+        modal.addEventListener('close', (data) => {
+          console.log('Ventana cerrada', data);
+        });
+    </script>
 </body>
 </html>
